plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

bootJar.enabled = false

repositories {
	mavenCentral()
}

subprojects {
	group = 'com.chaegangjo'
	version '0.0.1-SNAPSHOT'
	sourceCompatibility = '21'

	apply plugin: 'java'
	apply plugin: 'java-library'
	apply plugin: 'io.spring.dependency-management'

	java {
		toolchain {
			languageVersion = JavaLanguageVersion.of(21)
		}
	}

	configurations {
		compileOnly {
			extendsFrom annotationProcessor
		}
	}

	repositories {
		mavenCentral()
	}

	dependencies { //모든 하위 모듈에 적용
		compileOnly 'org.projectlombok:lombok:1.18.38'
		annotationProcessor 'org.projectlombok:lombok:1.18.38'
		testImplementation 'org.springframework.boot:spring-boot-starter-test'

		//swagger
		implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.0"
	}

	test {
		useJUnitPlatform()
	}

	tasks.withType(JavaCompile).configureEach {
		options.fork = true
		options.forkOptions.jvmArgs += [
			'--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
			'--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
			'--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
			'--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
			'--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
			'--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
			'--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
			'--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
			'--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
			'--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED'
		]
	}
}
